# gaiadr3-analysis

./: #distribution-of-distances-stars.py  .gitignore  .readthedocs.yaml  README.md  hr_diagram.py  lightcurve.py  lombscargle  lombscargle.py  pyproject.toml  scatterRaVsDec.py  scatterplot.py  setup.cnf  setup.py  testPlots.ipynb
.github/workflows/: tests.yml
.ipynb_checkpoints/: lightcurve-checkpoint.py  lombscargle-checkpoint.py  testPlots-checkpoint.ipynb
data/: EPOCH_PHOTOMETRY-Gaia DR3 6237015550067390592.csv
docs/: requirements.txt
docs/source/: conf.py  constants.rst  epoch_photometry.rst  gaia_input.rst  index.rst  mean_photometry.rst  modules.rst
gaiadr3_analysis/: MeMisSurvey.ipynb  __init__.py  constants.py  epoch_photometry.py  gaia_input.py  lombscargle.py  mean_photometry.py  scatterplot.py
gaiadr3_analysis/.ipynb_checkpoints/: epoch_photometry-checkpoint.py  lombscargle-checkpoint.py  testPlots-checkpoint.ipynb
gaiadr3_analysis/old/: scatterplot.py
notebooks/: DEMO.ipynb  Example1_MiMes.ipynb  Example2_HD13745.ipynb  Example3_HD148937.ipynb  Example4_Cluster.ipynb  MeMisSurvey.ipynb  Presentation126.ipynb  TestDatalinkQuery.ipynb  TestPeriodAnalysis.ipynb  constants.py  testPlots.ipynb
notebooks/DEMO/: DEMO.ipynb
notebooks/OLD/: MiMesSurvey.ipynb  TestPeriodAnalysis.ipynb  testErrorBars.ipynb  testInput.ipynb  testPlots.ipynb
notebooks/VizieRSurvey_SIMBAD/: HD17505.csv  HD191201.csv  HD193322.csv  HD218195.csv  VizieRSurveyCrossMath.ipynb  test_stars.csv  (+1 more)
tests/: test_epoch_photometry.py  test_gaia_input.py  test_mean_photometry.py
(+15 files in other folders)
